[workspace]
members = ["bin/*"]
resolver = "3"

[workspace.dependencies]
rustedcomputer = { path = "../rustedcomputer-rs" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
incremental = false # Disable incremental compilation for release
