[package]
name = "rustedcomputer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Programmable Computers in Minecraft with WebAssembly"
homepage = "https://github.com/TheBlckbird/rustedcomputer"
repository = "https://github.com/TheBlckbird/rustedcomputer"
readme = "Readme.md"

[dependencies]
thiserror = "2.0.16"
